Terraform/db_instance.tf
resource "aws_db_instance" "mysql" {
  allocated_storage                     = "20"
  auto_minor_version_upgrade            = "true"
  availability_zone                     = "us-east-1a"
  backup_retention_period               = "7"
  backup_window                         = "03:00-05:00"
  ca_cert_identifier                    = "rds-ca-2019"
  copy_tags_to_snapshot                 = "true"
  db_subnet_group_name                  = aws_db_subnet_group.db-subnet-group.name
  deletion_protection                   = "false"
  enabled_cloudwatch_logs_exports       = ["audit", "error", "general", "slowquery"]
  engine                                = "mysql"
  engine_version                        = "5.7.16"
  iam_database_authentication_enabled   = "false"
  identifier                            = "mysql"
  instance_class                        = "db.t2.micro"
  iops                                  = "0"
  license_model                         = "general-public-license"
  maintenance_window                    = "mon:00:00-mon:02:00"
  max_allocated_storage                 = "1000"
  monitoring_interval                   = "0"
  //monitoring_role_arn                   = "arn:aws:iam::var.AWS_ID:role/rds-monitoring-role"
  //monitoring_role_arn                   = aws_iam_role.rds-monitoring-role.arn
  multi_az                              = "false"
  name                                  = var.MYSQL_DB
  option_group_name                     = "default:mysql-5-7"
  parameter_group_name                  = "default.mysql5.7"
  performance_insights_enabled          = "false"
  performance_insights_retention_period = "0"
  port                                  = "3306"
  publicly_accessible                   = "true"
  storage_encrypted                     = "false"
  storage_type                          = "gp2"
  username                              = var.MYSQL_USER
  password                              = var.MYSQL_PASSWORD
  vpc_security_group_ids                = [aws_security_group.MySQL.id]
}
